--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ FLASK_ENV=development
 
 # Change the following values for local development.
 SECRET_KEY=secret-key
+TRELLO_API_KEY=trello-key
+TRELLO_API_TOKEN=trello-token
+TRELLO_BOARD_ID=board-id
