--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,7 @@ FLASK_APP=todo_app/app
 FLASK_ENV=development
 
 # Change the following values for local development.
+SECRET_KEY=secret_key
 TRELLO_API_KEY=trello-key
 TRELLO_API_TOKEN=trello-token
 TRELLO_BOARD_ID=board-id
